--- a/vignettes/vignette_02_cross_validation.Rmd
+++ b/vignettes/vignette_02_cross_validation.Rmd
@@ -5,7 +5,7 @@ date: "`r format(Sys.Date(), '%B %Y')`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Time Series Cross Validation}
-  %\VignetteEngine{knitr::knitr}
+  %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
