--- a/vignettes/vignette_03_data_visualization.Rmd
+++ b/vignettes/vignette_03_data_visualization.Rmd
@@ -5,7 +5,7 @@ date: "`r format(Sys.Date(), '%B %Y')`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Visualization of Time Series Data}
-  %\VignetteEngine{knitr::knitr}
+  %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
